        
pkginclude_HEADERS = nzb_fetch.h
        
       
nobase_noinst_HEADERS = \
        crc32.h \
        file.h \
        global.h \
        net.h \
        nttp_connection.h \
        nzb_fetch.h \
        parse_nzb.h \
        post.h \
        process.h \
        queue.h \
        reallocf.h \
        segment.h \
        server.h \
        yenc.h 
